add endpoint GetProfile
